--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@vueuse/core": "^13.6.0",
     "@vueuse/head": "^2.0.0",
     "@vueuse/motion": "^3.0.3",
+    "@zxcvbn-ts/core": "^3.0.4",
     "browser-image-compression": "^2.0.2",
+    "crypto-js": "^4.2.0",
     "file-saver": "^2.0.5",
     "highlight.js": "^11.11.1",
     "jszip": "^3.10.1",
